--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "dependencies": {
     "@gnosis.pm/safe-apps-sdk": "^0.3.1",
-    "@gnosis.pm/safe-react-components": "^0.2.0",
+    "@gnosis.pm/safe-react-components": "0.1.2",
     "@material-ui/core": "^4.11.0",
     "@studydefi/money-legos": "^2.3.7",
     "@types/jest": "^26.0.10",
