--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gnosis-safe-app-starter",
-  "version": "0.0.1",
-  "description": "Gnosis Safe App Starter",
+  "name": "safe-app-idle-v4",
+  "version": "2.0.0",
+  "description": "Gnosis Safe App for Idle contracts v4",
   "author": "Kris Urbas @krzysu",
   "license": "MIT",
   "private": true,
