Display version next to app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Idle",
-  "name": "Idle",
+  "short_name": "Idle v4",
+  "name": "Idle v4",
   "description": "Always the best yield, with no effort",
   "iconPath": "logo.svg",
   "icons": [
