--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "devDependencies": {
     "react-app-rewired": "^2.1.6",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "script": "ts-node --script-mode --transpile-only"
   },
   "eslintConfig": {
     "extends": "react-app"
